--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "core-js": "3.24.1",
     "dsbridge": "^3.1.4",
     "js-sha1": "^0.6.0",
+    "pinia": "^2.0.33",
     "silly-datetime": "^0.1.2",
     "vant": "^4.1.0",
     "vue": "3.2.37",
     "vue-i18n": "^9.2.0",
     "vue-router": "4.1.3",
-    "vuex": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
