--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "vue": "3.2.37",
     "vue-i18n": "^9.2.0",
     "vue-router": "4.1.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@vladmandic/face-api": "^1.7.9",
+    "@vladmandic/human": "^3.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
