--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.1",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --mode test", 
     "dev:test": "vue-cli-service serve --mode test",
     "dev:prod": "vue-cli-service serve --mode prod",
     "build": "npm run build:prod",
